stages/stage8/k8s/ui/frontend/frontend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: apollo11-ui
  labels:
    app: frontend
    stage: "8"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        stage: "8"
    spec:
      serviceAccountName: apollo11-ui
      priorityClassName: apollo11-app-critical
      terminationGracePeriodSeconds: 30
      volumes:
        - name: tmp-empty-dir
          emptyDir: {}
        - name: var-run-empty-dir
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            fsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp-empty-dir
              mountPath: /tmp
            - name: var-run-empty-dir
              mountPath: /var/run
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
        - name: frontend
          image: apollo11/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            fsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp-empty-dir
              mountPath: /tmp
            - name: var-run-empty-dir
              mountPath: /var/run
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
